<?xml version="1.0"?>
<package>
  <name>wifi_sensor</name>
  <version>0.0.1</version>
  <description>The wifi_sensor package</description>

  <maintainer email="blum@informatik.hu-berlin.de">Christian Blum</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
